# CopeTech-Edgar

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  EXTRACTION_PLAN.md  README.md  README_DEPLOY.md  docker-compose.yml  pyproject.toml
analysis/phase0_thesis/: README.md  REPORT.md  __init__.py  backtest.py  config.py  consensus_score.py  cusip_map.py  db.py  ingest.py  metrics.py  report.py  run_all.py  summary.py
analysis/phase0_thesis/tests/: __init__.py  test_consensus_score.py  test_cusip_map.py  test_ingestion.py  test_metrics.py  test_report.py  test_summary.py
docs/: edgar-parser-architecture.md  edgar-parser-limitations.md  edgar-parser-overview.md  edgar-parser-tutorial.md
scripts/: integration_smoke.py
src/copetech_sec/: __init__.py  app.py  aws_resources.py  cache_manager.py  document_handler.py  financial_processor.py  form144_processor.py  form4_processor.py  form8k_processor.py  http_client.py  market_data.py  sec_api.py  sec_fetch_13f.py  sec_fetch_filings.py  sec_fetch_financials.py  sec_fetch_signals.py  sec_fetch_transactions.py  settings.py  sql_cache_manager.py  supply_chain_parser.py  tag_mapping.py  thirteenf_processor.py
tests/: conftest.py  test_app.py  test_cache_manager.py  test_financial_processor.py  test_form144_processor.py  test_form4_signals.py  test_form8k_processor.py  test_http_client.py  test_market_data.py  test_supply_chain_parser.py  test_thirteenf_processor.py
