[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "copetech-edgar"
version = "0.1.0"
description = "Reusable EDGAR/SEC backend extracted from Sentinel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9.0",
  "python-dotenv>=1.2.1",
  "aiosqlite>=0.22.1",
  "pandas>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "boto3>=1.35.0",
  "yfinance>=0.2.66",
]

[project.scripts]
copetech-sec-api = "copetech_sec.app:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/copetech_sec"]
